Переделал функционал получения курса, теперь с пагинацией и фильтрацией по тегу
